made the team images crop top center instead of center center to avoid head chop on mobile

--- a/wp-content/themes/wptheme-lfb-0.2/src/styles/_project.players.scss
+++ b/wp-content/themes/wptheme-lfb-0.2/src/styles/_project.players.scss
@@ -22,7 +22,7 @@
     }
     .front {
         background-repeat: no-repeat;
-        background-position: center center;
+        background-position: top center;
     }
     .back {
         border:1px solid $navy;
